# Benchmark-of-statistic-methods

./: LICENSE  README.md  run_benchmark.py
benchmark-tree-regressions-py/: README.md  pyproject.toml  run_benchmark.py
benchmark-tree-regressions-py/results/: benchmark_real.csv  benchmark_synthetic.csv
benchmark-tree-regressions-py/src/benchmark/: config.py
benchmark-tree-regressions-py/src/benchmark/datasets/: real.py
benchmark-tree-regressions-py/src/benchmark/evaluation/: __init__.py  benchmark.py  evaluate.py  upload.py
benchmark-tree-regressions-py/src/benchmark/methods/: __init__.py  catboost.py  mars.py  xgboost.py
benchmark-tree-regressions-py/tests/: __init__.py  test_synthetic.py
src/benchmark/: __init__.py
src/benchmark/datasets/: __init__.py  synthetic.py
src/benchmark/evaluation/: cross_validation.py
src/benchmark/methods/: bart.py  base.py  mean.py  random_forest.py  xbart.py
src/benchmark/webapp/: __init__.py  app.py
tests/: test_methods.py
